--- a/mobile/src/main/res/layout/fragment_control_scheme.xml
+++ b/mobile/src/main/res/layout/fragment_control_scheme.xml
@@ -18,8 +18,10 @@
         android:text="@string/go"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cs_rg_auto"/>
+        app:layout_constraintTop_toBottomOf="@+id/cs_rg_auto"
+        app:layout_constraintVertical_bias="0.0"/>
 
     <TextView
         android:id="@+id/cs_txt_speed"
