--- a/mobile/src/main/res/layout/activity_dev.xml
+++ b/mobile/src/main/res/layout/activity_dev.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_gradient">
 
     <Spinner
         android:id="@+id/dev_spin_num_setts"
@@ -18,44 +19,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/dev_btn_num_sett"/>
 
-    <Spinner
-        android:id="@+id/dev_spin_bool_setts"
-        android:layout_width="154dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/dev_btn_bool_sett"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/dev_btn_bool_sett"/>
-
     <EditText
         android:id="@+id/dev_edit_num_sett"
-        android:layout_width="85dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:ems="10"
         android:imeOptions="actionDone"
         android:inputType="numberSigned|numberDecimal"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/dev_btn_num_sett"
         app:layout_constraintEnd_toStartOf="@+id/dev_btn_num_sett"
+        app:layout_constraintStart_toEndOf="@+id/dev_spin_num_setts"
         app:layout_constraintTop_toTopOf="@+id/dev_btn_num_sett"/>
-
-    <Switch
-        android:id="@+id/dev_switch_bool_sett"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/dev_btn_bool_sett"
-        app:layout_constraintEnd_toStartOf="@+id/dev_btn_bool_sett"
-        app:layout_constraintStart_toEndOf="@+id/dev_spin_bool_setts"
-        app:layout_constraintTop_toTopOf="@+id/dev_btn_bool_sett"/>
 
     <Button
         android:id="@+id/dev_btn_num_sett"
@@ -68,122 +45,97 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <Button
-        android:id="@+id/dev_btn_bool_sett"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/set"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dev_btn_num_sett"/>
-
     <android.support.constraint.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="322dp"/>
+        app:layout_constraintGuide_end="393dp"/>
 
     <TextView
         android:id="@+id/dev_txt_sett_speed"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:text="@string/sett_speed"
+        android:textAlignment="viewStart"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/dev_vtxt_sett_speed"
-        app:layout_constraintHorizontal_bias="0.81"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_avggpsy"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        tools:textAlignment="center"/>
-
-    <TextView
-        android:id="@+id/dev_txt_sett_turn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/sett_turn"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/dev_txt_sett_speed"
-        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_speed"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_speed"
-        tools:textAlignment="center"/>
-
-    <TextView
-        android:id="@+id/dev_txt_sett_accelx"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/sett_accelx"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_speed"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_turn"/>
-
-    <TextView
-        android:id="@+id/dev_txt_sett_accely"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/sett_accely"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_speed"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_accelx"/>
-
-    <TextView
-        android:id="@+id/dev_txt_sett_accelz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/sett_accelz"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_speed"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_accely"/>
+        tools:textAlignment="textStart"/>
 
 
     <TextView
         android:id="@+id/dev_txt_sett_gpsx"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/sett_gpsx"
-        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_speed"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_accelz"/>
+        android:textAlignment="viewStart"
+        app:layout_constraintEnd_toEndOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_speed"/>
 
     <TextView
         android:id="@+id/dev_txt_sett_gpsy"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/sett_gpsy"
+        android:textAlignment="viewStart"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_speed"
+        app:layout_constraintEnd_toEndOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_avggpsy"
         app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_gpsx"/>
 
     <TextView
-        android:id="@+id/dev_txt_sett_auto"
-        android:layout_width="wrap_content"
+        android:id="@+id/dev_txt_sett_accloc"
+        android:layout_width="0dp"
         android:layout_height="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/sett_auto"
+        android:text="@string/sett_acc"
+        android:textAlignment="viewStart"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_speed"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_gpsy"/>
+        app:layout_constraintEnd_toEndOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_avggpsy"/>
 
     <TextView
-        android:id="@+id/dev_txt_sett_sensor"
-        android:layout_width="wrap_content"
+        android:id="@+id/dev_txt_sett_avggpsx"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/sett_sensor"
+        android:text="@string/sett_avggpsx"
+        android:textAlignment="viewStart"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_speed"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_auto"/>
+        app:layout_constraintEnd_toEndOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_accavg"/>
+
+    <TextView
+        android:id="@+id/dev_txt_sett_avggpsy"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/sett_avggpsy"
+        android:textAlignment="viewStart"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_avggpsx"/>
+
+    <TextView
+        android:id="@+id/dev_txt_sett_accavg"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/sett_acc"
+        android:textAlignment="viewStart"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintStart_toStartOf="@+id/dev_txt_sett_avggpsy"
+        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_gpsy"/>
 
     <TextView
         android:id="@+id/dev_vtxt_sett_speed"
@@ -192,64 +144,21 @@
         android:layout_marginTop="16dp"
         android:text="@string/sett_null"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_turn"
-        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_turn"
-        app:layout_constraintTop_toTopOf="@+id/guideline2"/>
-
-    <TextView
-        android:id="@+id/dev_vtxt_sett_turn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/sett_null"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_accelx"
-        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_accelx"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_speed"/>
-
-    <TextView
-        android:id="@+id/dev_vtxt_sett_accelx"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/sett_null"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_gpsy"
-        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_accely"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_turn"/>
-
-    <TextView
-        android:id="@+id/dev_vtxt_sett_accely"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/sett_null"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_accelz"
-        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_accelz"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_accelx"/>
-
-    <TextView
-        android:id="@+id/dev_vtxt_sett_accelz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/sett_null"
-        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_gpsx"
         app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_gpsx"
-        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_accely"/>
+        app:layout_constraintTop_toTopOf="@+id/guideline2"/>
 
 
     <TextView
         android:id="@+id/dev_vtxt_sett_gpsx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/sett_null"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_gpsy"
         app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_gpsy"
-        app:layout_constraintTop_toTopOf="@+id/dev_txt_sett_gpsx"/>
+        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_speed"/>
 
     <TextView
         android:id="@+id/dev_vtxt_sett_gpsy"
@@ -258,69 +167,113 @@
         android:layout_marginTop="8dp"
         android:text="@string/sett_null"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_auto"
-        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_auto"
-        app:layout_constraintTop_toBottomOf="@+id/dev_vtxt_sett_gpsx"/>
+        app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_accloc"
+        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_accloc"
+        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_gpsx"/>
+
 
     <TextView
-        android:id="@+id/dev_vtxt_sett_auto"
+        android:id="@+id/dev_vtxt_sett_accloc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
+        android:layout_marginStart="96dp"
         android:layout_marginTop="8dp"
-        android:text="@string/sett_disabled"
+        android:text="@string/sett_null"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dev_vtxt_sett_gpsy"/>
+        app:layout_constraintTop_toBottomOf="@+id/dev_txt_sett_gpsy"/>
 
     <TextView
-        android:id="@+id/dev_vtxt_sett_sensor"
+        android:id="@+id/dev_vtxt_sett_avggpsx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/sett_disabled"
+        android:text="@string/sett_null"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_auto"
-        app:layout_constraintTop_toBottomOf="@+id/dev_vtxt_sett_auto"/>
+        app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_avggpsy"
+        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_avggpsy"
+        app:layout_constraintTop_toBottomOf="@+id/dev_vtxt_sett_accloc"/>
+
+    <TextView
+        android:id="@+id/dev_vtxt_sett_avggpsy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/sett_null"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_accloc"
+        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_accloc"
+        app:layout_constraintTop_toBottomOf="@+id/dev_vtxt_sett_avggpsx"/>
+
+    <TextView
+        android:id="@+id/dev_vtxt_sett_accavg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/sett_null"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/dev_vtxt_sett_avggpsy"
+        app:layout_constraintStart_toStartOf="@+id/dev_vtxt_sett_avggpsy"
+        app:layout_constraintTop_toBottomOf="@+id/dev_vtxt_sett_avggpsy"/>
 
     <Button
         android:id="@+id/dev_btn_update"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
         android:text="@string/update"
-        app:layout_constraintBottom_toTopOf="@+id/dev_btn_reset"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/dev_vtxt_sett_gpsy"
-        app:layout_constraintTop_toTopOf="@+id/guideline2"/>
+        app:layout_constraintBottom_toTopOf="@+id/dev_btn_return"
+        app:layout_constraintEnd_toEndOf="@+id/dev_btn_stop"
+        app:layout_constraintStart_toStartOf="@+id/dev_btn_num_sett"
+        app:layout_constraintTop_toBottomOf="@+id/dev_vtxt_sett_accavg"
+        app:layout_constraintVertical_bias="0.0"/>
 
     <Button
         android:id="@+id/dev_btn_reset"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
         android:text="@string/reset"
-        app:layout_constraintBottom_toTopOf="@+id/dev_btn_return"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/dev_vtxt_sett_gpsy"
-        app:layout_constraintTop_toTopOf="@+id/dev_vtxt_sett_accelz"/>
+        app:layout_constraintBottom_toBottomOf="@+id/dev_btn_update"
+        app:layout_constraintEnd_toStartOf="@+id/dev_btn_update"
+        app:layout_constraintStart_toStartOf="@+id/dev_btn_stop"
+        app:layout_constraintTop_toTopOf="@+id/dev_btn_update"
+        app:layout_constraintVertical_bias="0.0"/>
 
     <Button
         android:id="@+id/dev_btn_return"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="24dp"
         android:text="@string/return_to_prev_act"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/dev_vtxt_sett_sensor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/dev_btn_stop"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:text="Stop"
+        app:layout_constraintBottom_toTopOf="@+id/dev_btn_update"
+        app:layout_constraintEnd_toEndOf="@+id/dev_btn_start"
+        app:layout_constraintStart_toStartOf="@+id/dev_btn_start"
+        app:layout_constraintTop_toBottomOf="@+id/dev_btn_start"/>
+
+    <Button
+        android:id="@+id/dev_btn_start"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:text="Start"
+        app:layout_constraintBottom_toTopOf="@+id/dev_txt_sett_accavg"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/dev_vtxt_sett_gpsy"/>
+        app:layout_constraintStart_toEndOf="@+id/dev_vtxt_sett_speed"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"/>
 
 </android.support.constraint.ConstraintLayout>
